CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/genbrk.1.in"
               "${CMAKE_CURRENT_BINARY_DIR}/genbrk.1")

ICU_SIMPLE_CXX_TOOL(genbrk)

INSTALL(TARGETS genbrk
        RUNTIME DESTINATION ${BIN_DIR})
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/genbrk.1"
        DESTINATION ${MAN_DIR}/man1
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

