CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gensprep.8.in"
               "${CMAKE_CURRENT_BINARY_DIR}/gensprep.8")

ADD_EXECUTABLE(gensprep
    gensprep.c gensprep.h store.c)
LINK_ICU_LIBRARIES(gensprep ${TOOLUTIL_STUB})

IF(CMAKE_SYSTEM_NAME STREQUAL SunOS)
    SET_TARGET_PROPERTIES(gensprep PROPERTIES LINKER_LANGUAGE CXX)
ENDIF()

INSTALL(TARGETS gensprep
        RUNTIME DESTINATION ${SBIN_DIR})
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/gensprep.8"
        DESTINATION ${MAN_DIR}/man8
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

