CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/icupkg.8.in"
               "${CMAKE_CURRENT_BINARY_DIR}/icupkg.8")

ICU_SIMPLE_CXX_TOOL(icupkg)

INSTALL(TARGETS icupkg
        RUNTIME DESTINATION ${SBIN_DIR})
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/icupkg.8"
        DESTINATION ${MAN_DIR}/man8
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

