CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgdata.1.in"
               "${CMAKE_CURRENT_BINARY_DIR}/pkgdata.1")

ADD_EXECUTABLE(pkgdata
    pkgdata.cpp pkgtypes.h pkgtypes.c)
LINK_ICU_LIBRARIES(pkgdata ${TOOLUTIL_STUB})

INSTALL(TARGETS pkgdata
        RUNTIME DESTINATION ${BIN_DIR})
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/pkgdata.1"
        DESTINATION ${MAN_DIR}/man1
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

