CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gencfu.1.in"
               "${CMAKE_CURRENT_BINARY_DIR}/gencfu.1")

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/i18n")
ICU_SIMPLE_CXX_TOOL(gencfu)

INSTALL(TARGETS gencfu
        RUNTIME DESTINATION ${BIN_DIR})
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/gencfu.1"
        DESTINATION ${MAN_DIR}/man1
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

