CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/gencmn.8.in"
               "${CMAKE_CURRENT_BINARY_DIR}/gencmn.8")

ICU_SIMPLE_C_TOOL(gencmn)

INSTALL(TARGETS gencmn
        RUNTIME DESTINATION ${SBIN_DIR})
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/gencmn.8"
        DESTINATION ${MAN_DIR}/man8
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

